11-docker-kubernetes/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: identity
  labels:
    app.kubernetes.io/part-of: identity-platform
