11-docker-kubernetes/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-api
  namespace: identity
spec:
  type: ClusterIP
  selector:
    app: identity-api
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
